--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DashboardActivity"></activity>
+        <activity android:name=".resto_list"></activity>
+        <activity android:name=".DashboardActivity" />
         <activity android:name=".register_Activity" />
         <activity android:name=".loginActivity" />
         <activity android:name=".zaras" />
