--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 24 13:32:00 WIB 2019
-sdk.dir=/Users/zara/Library/Android/sdk
+#Wed Jan 01 23:57:56 KST 2020
+sdk.dir=/Users/sarangyang/Library/Android/sdk
